@@ -1,5 +1,10 @@
 2004-11-03  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (CloseLogMenu): Close the calendar when closing the log.
+
+	* calendar.c (CalendarMenu): Make sure to re-create calendar data
+	if there is none.
+
 	* logview.h: Remove unused var.
 
 	* logrtns.c (ReadLogStats): Remove unused variables.
